feat(v2): verified modular monolith, Flyway migration, Timefold VRP solving, and RBAC authentication